# ImageComparer

./: .gitignore  pyproject.toml  requirements.txt
src/imagecomparer/: app.py  config.py  constants.py  main.py  processor.py
